Replace use of ReflectionUtil with JVMCIReflectionUtil